# SemiAnalysis-task

./: .env  .env.example  AGENTS.md  ERRORS.md  README.md  TODO.md  benchmark_report.md  metrics.jsonl  output.json  pyproject.toml  run_benchmark.py
client/: shell_executor.py  task_queue.py  turn_manager.py
datasets/: load_swebench.py
metrics/: collector.py  report.py
proxy/: proxy.py
server/: health_check.py  sglang-MTP.sh  sglang_qwen3_8b.sh  sglang_start.sh  vllm_start.sh
