[project]
name = "semianalysis-task"
version = "0.1.0"
description = "SWE-bench benchmark harness with vLLM/SGLang inference proxy"
requires-python = ">=3.12"
dependencies = [
    # FastAPI proxy
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    # Dataset loading
    "datasets>=2.20.0",
    # Metrics / plotting
    "matplotlib>=3.9.0",
    # Env var loading
    "python-dotenv>=1.0.0",
]

# vLLM and SGLang pin conflicting transitive deps — install one at a time on
# the GPU server. Example:
#   uv sync --extra vllm      # for vLLM serving
#   uv sync --extra sglang    # for SGLang serving
[project.optional-dependencies]
vllm   = ["vllm>=0.9.0"]
sglang = ["sglang[all]>=0.4.0", "mooncake-transfer-engine"]

[project.scripts]
benchmark = "run_benchmark:cli"

[tool.uv]
# vllm and sglang pin conflicting transitive deps — cannot install together
conflicts = [
    [{ extra = "vllm" }, { extra = "sglang" }],
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["client", "datasets", "metrics", "proxy", "server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
